tons of changes changed layout navbar changed main page to have contat/apps on one page updated contact form and account forms added budget app pictures

--- a/MyWebsite/Views/Account/ForgotPassword.cshtml
+++ b/MyWebsite/Views/Account/ForgotPassword.cshtml
@@ -1,13 +1,12 @@
 ﻿@model ForgotPasswordViewModel
 <link rel="stylesheet" href="~/css/materialize.css" />
 
-<h3 class="centerAccountText" style="margin-top:150px;">FORGOT PASSWORD</h3>
+<h3 class="centerAccountText" style="margin-top:150px;">Forgot Password</h3>
 
-
-<div class="row" style=" margin-top:50px;">
-    <div class="accountBox col l6 offset-l3 m10 offset-m1 s12 z-depth-4">
-        <form id="acctForm" asp-action="ForgotPassword" method="post">
-            <h4 class="centerAccountText flow-text" style="margin-top:30px; margin-bottom: 30px;">Enter Your Email</h4>
+<div class="row" style=" margin:50px 10px;">
+    <div class="accountBox col l6 m12 s12 offset-l3 z-depth-4">
+        <form class="acctForm" asp-action="ForgotPassword" method="post">
+            <h4 class="thinBlackHeading flow-text" style="margin-top:30px; margin-bottom: 30px;">Enter Your Email</h4>
             <div class="input-field">
                 <i class="material-icons prefix">person_outline</i>
                 <input asp-for="Email" id="Email" placeholder="Username" class="validate" required type="text" style="width:85%" />
