--- a/MyWebsite/Views/Budgets/_PastBudgetSetBudgetLimitForm.cshtml
+++ b/MyWebsite/Views/Budgets/_PastBudgetSetBudgetLimitForm.cshtml
@@ -5,7 +5,7 @@
     var currentMonth = DateTime.Now.ToString("MMMM");
 }
 
-<h5 style="text-align: center; color: #c5e1a5; margin-top: 55px; margin-bottom: 25px;">A budget has not yet been created for the month of @currentMonth</h5>
+<h5 style="text-align: center; color: #c5e1a5; margin-top: 55px; margin-bottom: 25px;">A budget has not been created for the month of @currentMonth</h5>
 <div>
     <div class="row">
         <div class="col l12 m12 s12" align="center">
