--- a/MyWebsite/Views/Account/Register.cshtml
+++ b/MyWebsite/Views/Account/Register.cshtml
@@ -1,12 +1,12 @@
 ﻿@model RegisterViewModel
 
-<h3 class="centerAccountText" style="margin-top:150px;">REGISTER</h3>
+<h3 class="centerAccountText" style="margin-top:150px;">Register</h3>
 
-<div style="margin:50px 100px;">
-    <div class="row" margin-top: 50px;>
-        <div class="accountBox col l6 offset-l3 m10 offset-m1 s12 z-depth-4">
-            <form id="acctForm" asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
-                <h4 class="centerAccountText flow-text" style="margin-top:30px; margin-bottom: 30px;">Create a New Account</h4>
+<div style="margin:50px 10px;">
+    <div class="row">
+        <div class="accountBox col l6 m12 s12 offset-l3 z-depth-4">
+            <form class="acctForm" asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
+                <h4 class="thinBlackHeading flow-text" style="margin-top:30px; margin-bottom: 30px;">Create a New Account</h4>
                 <div class="input-field">
                     <i class="material-icons prefix">person_outline</i>
                     <input asp-for="Email" id="Email" placeholder="Username" class="validate" required type="text" style="width:85%" />
