--- a/MyWebsite/Views/Budgets/Index.cshtml
+++ b/MyWebsite/Views/Budgets/Index.cshtml
@@ -18,12 +18,18 @@
 @if (!SignInManager.IsSignedIn(User)) //If not logged in/registered
 {
     <p style="text-align:center; font-size:20px; margin-top:30px; ">Please log in or register first to use the app.</p>
-    <div class="carousel">
-        <a class="carousel-item" href="#one!"><img src="~/images/painlessBudget/painlessBudget1.png" /></a>
-        <a class="carousel-item" href="#two!"><img src="~/images/painlessBudget/painlessBudget2.png" /></a>
-        <a class="carousel-item" href="#three!"><img src="~/images/painlessBudget/painlessBudget3.png" /></a>
-        <a class="carousel-item" href="#four!"><img src="~/images/painlessBudget/painlessBudget4.png" /></a>
-        <a class="carousel-item" href="#five!"><img src="~/images/painlessBudget/painlessBudget5.png" /></a>
+    <div class="row">
+        <div id="budgetPics" align="center"  class="col l10 offset-l1 m12 s12">
+            <img class="z-depth-5" src="~/images/painlessBudget/budget1.png" />
+            <img src="~/images/painlessBudget/budget2.png" />
+            <img src="~/images/painlessBudget/budget3.png" />
+            <img src="~/images/painlessBudget/budget4.png" />
+            <img src="~/images/painlessBudget/budget5.png" />
+            <img src="~/images/painlessBudget/budget6.png" />
+            <img src="~/images/painlessBudget/budget7.png" />
+            <img src="~/images/painlessBudget/budget8.png" />
+            <img src="~/images/painlessBudget/budget9.png" />
+        </div> 
     </div>
 }
 
