--- a/MyWebsite/Views/Budgets/PastBudgets.cshtml
+++ b/MyWebsite/Views/Budgets/PastBudgets.cshtml
@@ -8,31 +8,26 @@
 <div class="container">
     <div style="margin-top:25px; text-align:center;">
         <p class="greenCenterTxt">@ViewBag.Deleted</p>
-        <a href='@Url.Action("Index", "Budgets", new { userName = user })' ; class="waves-effect waves-light underline-hover btn-large grey darken-4" style="font-weight:bold; font-size:20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
+        <a href='@Url.Action("Index", "Budgets", new { userName = user })' ; class="waves-effect waves-light btn-large greyBudgetBtn"><i class="material-icons left">arrow_back</i>Return to Budget</a>
     </div>
 
-    <h4 style="margin-top:55px; margin-bottom:25px; font-weight:bold; text-align:center">Past Budgets</h4>
+    <h4 style="margin-top:55px; margin-bottom:25px; text-align:center">Past Budgets</h4>
     @if (ViewBag.BudgetMonthList.Count > 0)
     {
         @*Displays month buttons only for months with budgets*@
         <div style="text-align: center;">
             @foreach (var month in ViewBag.BudgetMonthList)
             {
-                <button id=@month class="waves-effect waves-light underline-hover btn-large grey darken-4" style="margin-top: 10px;">@month</button>
+                <button id=@month class="waves-effect waves-light btn-large greyBudgetBtn" style="margin-top: 10px;">@month</button>
             }
         </div>
     }
-    else
-    {
-        <h5 class="greenCenterTxt"><i class="far fa-times-circle"></i> No past budgets to display</h5>
-    }
+    else {<h5 class="greenCenterTxt"><i class="far fa-times-circle"></i> No past budgets to display</h5>}
 </div>
 
 <div>
     @Html.Partial("_PastBudgets")
 </div>
-
-<div style="margin-top: 300px;"></div>
 
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
