--- a/MyWebsite/wwwroot/css/site.css
+++ b/MyWebsite/wwwroot/css/site.css
@@ -41,15 +41,19 @@ html {
     content: '';
     position: absolute;
     height: 100%;
-    background-color: #3c345b !important;
+    background-color: #31374c !important;
     animation: indeterminate_first 1.5s infinite ease-out;
+}
+
+.indeterminate{
+    background-color: black !important;
 }
 
 .indeterminate:after {
     content: '';
     position: absolute;
     height: 100%;
-    background-color: grey !important;
+    background-color: black !important;
     animation: indeterminate_second 1.5s infinite ease-in;
 }
 
@@ -89,6 +93,44 @@ footer {
     bottom: 0;
 }
 
+/*Mobile Navbar*/
+
+
+.mobileNav ul li:hover {
+    background-color: black !important;
+}
+
+.mobileNav ul li {
+    float: none !important;
+    text-align: center;
+    display: inline-block !important;
+}
+
+    .mobileNav ul li a:hover {
+        color: #263442 !important;
+    }
+
+.mobileNav ul a {
+    font-size: 23px !important;
+    margin: 10px !important;
+    letter-spacing: 2.5px !important;
+    color: #cfd8dc !important;
+}
+
+.mobileNav {
+    height: 140px !important;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+#navHomeIcon:hover {
+    color: #263442;
+}
+
+#emailAddress:hover {
+    color: white !important;
+}
+
 /*Navbar*/
 
 .mainNav ul li:hover {
@@ -97,13 +139,14 @@ footer {
 
 .mainNav ul a:hover {
     color: #cfd8dc !important;
-    border: 1px solid #cfd8dc !important;
-    border-radius: 4px;
+    background-color: #141d26;
+    opacity: 0.9;
+    border-radius: 2px;
 }
 
 .mainNav ul a {
     font-size: 23px !important;
-    margin: 10px !important;
+    margin: 7px !important;
     letter-spacing: 2.5px !important;
     color: #cfd8dc !important;
 }
@@ -203,7 +246,7 @@ a {
 }
 
 .grey-hover:hover {
-    background-color: #525e78 !important;
+    background-color: #a8b3c4 !important;
 }
 
 .underlineTitle {
@@ -214,8 +257,48 @@ a {
 
 /*HOME*/
 
+#contactImage {
+    background-image: url('../images/nebula.png');
+    border-radius: 4px;
+    background-size: cover;
+    background-position: 50% 50%;
+    padding: 60px;
+}
+
+#homeImage {
+    background-image: url('../images/darkStars.jpg');
+    border-radius: 4px;
+    background-size: cover;
+    background-position: 50% 50%;
+    padding: 60px;
+}
+
+#appsImage {
+    background-image: url('../images/appsImage.png');
+    border-radius: 4px;
+    background-size: cover;
+    background-position: 50% 50%;
+    padding: 60px;
+}
+
+
+.contactFormIcons {
+    font-size: 35px !important;
+    margin-bottom: 5px;
+    color: #020305;
+}
+
+
+.appBoxes {
+    border: 1px solid white;
+    background-color: #020305;
+    padding: 5px;
+    margin: 15px;
+    border-radius: 4px;
+}
+
 #gitHubIcon {
-    color: #525e78;
+    color: #a8b3c4;
     font-size: 50px;
     margin-top: 20px;
     margin-bottom: 15px;
@@ -226,15 +309,14 @@ a {
     text-align: center !important;
 }
 
-#skillsContainer {
-    background-color: #11141c;
-    margin-top: 50px;
-    margin-bottom: 10px;
+.darkContainer {
+    background-color: #a8b3c4;
     text-align: center;
-    padding: 10px;
-    opacity: 0.95;
+    opacity: 0.6;
     border-radius: 4px;
+    height: 100%;
 }
+
 
 #tech-used {
     -webkit-column-count: 4;
@@ -249,7 +331,16 @@ a {
     font-size: 30px;
     letter-spacing: 1.5px;
     text-align: center;
-    margin-top: 100px;
+    margin-top: 130px;
+}
+
+.thinBlackHeading {
+    font-weight: 500;
+    font-size: 35px;
+    letter-spacing: 1.5px;
+    text-align: center;
+    padding: 25px;
+    color: black;
 }
 
 .techBoxes li {
@@ -257,6 +348,15 @@ a {
     background-color: #020305;
     padding: 3px;
     margin: 5px;
+    border-radius: 4px;
+    font-weight: 500;
+}
+
+.appBoxes {
+    border: 1px solid white;
+    background-color: #020305;
+    padding: 5px;
+    margin: 15px;
     border-radius: 4px;
 }
 
@@ -287,52 +387,6 @@ a {
     color: #cfd8dc;
 }
 
-/*Inuts & Dropdowns*/
-
-/*input[type=email]:not(.browser-default) {
-    /*border-bottom: 1px solid #54b798 !important;*/
-/*box-shadow: 0 1px 0 0 black !important;
-    background-color: #080C10 !important;
-}*/
-
-/*input[type=password]:not(.browser-default) {*/
-/*border-bottom: 1px solid #54b798 !important;*/
-/*box-shadow: 0 1px 0 0 black !important;
-    background-color: #080C10 !important;
-}*/
-
-/*input.valid[type=password]:not(.browser-default) {*/
-/*border-bottom: 1px solid #81cac4 !important;*/
-/*box-shadow: 0 1px 0 0 black !important;
-    background-color: #080C10 !important;
-}*/
-
-[type="checkbox"]:not(:checked), [type="checkbox"]:checked {
-    color: #54b798 !important;
-}
-
-
-/*input[type=text]:not(.browser-default) {
-    background-color: #212121;
-    color: #54b798;
-    font-size: 30px;
-}*/
-
-/*input.valid[type=number]:not(.browser-default),
-input.valid[type=number]:not(.browser-default):focus,
-input.valid[type=text]:not(.browser-default),
-input.valid[type=text]:not(.browser-default):focus,
-#budget-limit-amount,
-#purchase-item {
-    border-bottom: 1px solid #cfd8dc !important;
-    color: #81cac4;
-    font-size: 30px;
-    margin-top: 25px;
-}*/
-
-/*input[type=search]:not(.browser-default):focus:not([readonly]) {
-    color: #212121 !important;
-}*/
 
 .field-validation-error {
     color: #d32f2f !important;
@@ -341,10 +395,13 @@ input.valid[type=text]:not(.browser-default):focus,
 .field-validation-error {
     color: #d32f2f !important;
 }
-
-
 
 /*Budget*/
+#budgetPics img {
+    border: 5px solid #cfd8dc;
+    padding: 10px;
+    margin: 5px;
+}
 
 /*Budget Homepage*/
 #Total Spent {
@@ -364,7 +421,7 @@ input.valid[type=text]:not(.browser-default):focus,
 }
 
     .trashcan-icon:hover {
-        color: #54b798 !important;
+        color: #c5e1a5 !important;
     }
 
 .editBudgetLimitLabel {
@@ -396,81 +453,144 @@ input.valid[type=text]:not(.browser-default):focus,
     text-align: center !important;
 }
 
+/*Add transaction*/
+#addTransactionContainer {
+    background-color: #10171e;
+    padding: 10px;
+    opacity: 0.95;
+    text-align: center;
+}
+
+
+#categoryDropdown .dropdown-content li > a, .dropdown-content li > span {
+    font-size: 20px !important;
+    color: #cfd8dc !important;
+    border: none !important;
+    border-bottom: none !important;
+    text-align: center;
+    background-color: #37474f;
+}
+
+    #categoryDropdown .dropdown-content li > a, .dropdown-content li > span:hover {
+        background-color: #37474f !important;
+        color: #c5e1a5 !important;
+        opacity: 0.95;
+    }
+
+#categoryDropdown .dropdown-content li > a, .dropdown-content li > span {
+    border: 1px solid #37474f !important;
+    opacity: 0.95;
+}
+
+#categoryDropdown .select-wrapper, input.select-dropdown {
+    background-color: #37474f !important;
+    color: #cfd8dc !important;
+    font-size: 20px !important;
+    text-align: center;
+    border: 1px solid #c5e1a5 !important;
+}
+
+    #categoryDropdown .select-wrapper, input.select-dropdown:hover {
+        color: #c5e1a5 !important;
+        background-color: #37474f !important;
+    }
+
+#categoryDropdown, input, textarea, select {
+    color: #cfd8dc !important;
+    font-weight: bold !important;
+    border-bottom: 1px solid #c5e1a5 !important;
+}
+
+/*Contact*/
+
+#Message {
+    border-bottom: none !important;
+    color: #9e9e9e !important;
+    margin-top: -15px;
+    height: 100px;
+    font-size: 20px;
+    width: 94%;
+}
+
 /*Login*/
 
 /*Placeholder*/
-#acctForm input, .actual-edit-overlay {
-    -webkit-text-fill-color: #a2a8b5 !important;
+.acctForm input, .actual-edit-overlay {
+    -webkit-text-fill-color: #020305 !important;
 }
 
-    #acctForm input + label {
-        color: #525e78 !important;
+    .acctForm input + label {
+        color: #a8b3c4 !important;
         font-size: 31px !important;
     }
 
-    #acctForm input:focus + label {
-        color: #8397c1 !important;
+    .acctForm input:focus + label {
+        color: #020305 !important;
         margin-top: -20px;
     }
 
-/* icon prefix focus color */
-#acctForm .input-field .prefix.active {
-    color: #8397c1 !important;
+    .acctForm input[type=text]:not(.browser-default) {
+        background-color: #a8b3c4 !important;
+        font-size: 20px !important;
+        border-bottom: 1px solid #9e9e9e !important;
+        width: 85% !important;
+    }
+
+    /* icon prefix focus color */
+.acctForm .input-field .prefix.active {
+    color: #020305 !important;
 }
 
 /*Username input*/
-#acctForm input[type=text]:not(.browser-default) {
-    background-color: #525e78 !important;
-    font-size: 20px !important;
-    border-bottom: 1px solid #9e9e9e !important;
-}
 
     /*Username input - onclick*/
-    #acctForm input[type=text]:not(.browser-default):focus {
-        border-bottom: 1px solid #8397c1 !important;
+    .acctForm input[type=text]:not(.browser-default):focus {
+        border-bottom: 3px solid #8397c1 !important;
         color: #8397c1 !important;
     }
 
 /* valid color */
-#acctForm .input-field input[type=text].valid {
-    border-bottom: 1px solid #2fef36 !important;
+.acctForm .input-field input[type=text].valid {
+    border-bottom: 3px solid #2fef36 !important;
     color: #2fef36 !important;
 }
 /* invalid color */
-#acctForm .input-field input[type=text].invalid {
-    border-bottom: 1px solid #d32f2f !important;
+.acctForm .input-field input[type=text].invalid {
+    border-bottom: 3px solid #d32f2f !important;
     color: #d32f2f !important;
 }
 
-
 /*Password input*/
-#acctForm input[type=password]:not(.browser-default) {
-    background-color: #525e78 !important;
+.acctForm input[type=password]:not(.browser-default) {
+    background-color: #a8b3c4 !important;
     font-size: 20px !important;
     border-bottom: 1px solid #9e9e9e !important;
 }
 
     /*Password input - onclick*/
-    #acctForm input[type=password]:not(.browser-default):focus {
-        border-bottom: 1px solid #8397c1 !important;
+    .acctForm input[type=password]:not(.browser-default):focus {
+        border-bottom: 3px solid #8397c1 !important;
         color: #8397c1 !important;
     }
 
 /* valid color */
-#acctForm .input-field input[type=password].valid {
-    border-bottom: 1px solid #2fef36 !important;
+.acctForm .input-field input[type=password].valid {
+    border-bottom: 3px solid #2fef36 !important;
     color: #2fef36 !important;
 }
 /* invalid color */
-#acctForm .input-field input[type=password].invalid {
-    border-bottom: 1px solid #d32f2f !important;
+.acctForm .input-field input[type=password].invalid {
+    border-bottom: 3px solid #d32f2f !important;
     color: #d32f2f !important;
 }
 
 .accountBox {
-    background-color: #525e78;
+    background-color: #a8b3c4;
     padding: 50px !important;
+    border-radius: 4px;
+    opacity: 0.55;
 }
+
 
 .centerAccountText {
     text-align: center;
@@ -498,7 +618,7 @@ input.valid[type=text]:not(.browser-default):focus,
 }
 
     .purple-hover:hover {
-        color: #525e78 !important;
+        color: #a8b3c4 !important;
         font-weight: bold;
     }
 
@@ -506,13 +626,6 @@ input.valid[type=text]:not(.browser-default):focus,
     background-color: #54b798 !important;
 }
 
-.purple-trashcan {
-    color: #cfd8dc !important;
-}
-
-    .purple-trashcan:hover {
-        color: #525e78 !important;
-    }
 
 .squareSaveBtn {
     font-weight: bold;
@@ -535,10 +648,14 @@ input.valid[type=text]:not(.browser-default):focus,
     margin-top: 10px;
 }
 
+.redCenterTxt {
+    color: #d32f2f;
+    text-align: center
+}
+
 .greenCenterTxt {
     text-align: center;
-    font-weight: bold;
-    color: #54b798;
+    color: #c5e1a5;
     margin-top: 10px;
 }
 
@@ -624,8 +741,6 @@ input.budgetLimitInput {
     display: none;
 }
 
-ski
-
 #particles-js-snow canvas {
     position: absolute;
     width: 100%;
@@ -681,38 +796,59 @@ ski
         width: 65% !important;
     }
     /*Login*/
-    accountBox {
-        margin-right: 3px !important;
-        margin-left: 3px !important;
+    #loginImage {
+        background-image: url('../images/spiralGalaxy.jpg');
+        border-radius: 4px;
+        background-size: cover;
+        background-position: 50% 50%;
+        padding: 60px;
     }
-
+   
     input:focus + label {
         font-size: 20px !important;
         margin-top: -5px !important;
     }
 }
 
-
-@media only screen and (max-width: 1200px) and (min-width:750px) {
-    #tech-used {
-        -webkit-column-count: 2;
-        -moz-column-count: 2;
-        column-count: 2;
-        font-size: 19px;
-        width: 80%;
-        margin: auto;
-    }
-    /*Weather*/
-    #alertEmail {
-        width: 50% !important;
+@media only screen and (max-width: 750px) and (min-width:0px) {
+    #budgetPics img {
+        max-width: 400px;
+        max-height: 400px;
     }
 }
 
-@media only screen and (max-width: 1500px) and (min-width:1200px) {
-    #tech-used {
-        -webkit-column-count: 3;
-        -moz-column-count: 3;
-        column-count: 3;
-        font-size: 20px;
+    @media only screen and (max-width: 1200px) and (min-width:750px) {
+        #tech-used {
+            -webkit-column-count: 2;
+            -moz-column-count: 2;
+            column-count: 2;
+            font-size: 19px;
+            width: 80%;
+            margin: auto;
+            margin-bottom: 15px !important;
+        }
+
+        /*Weather*/
+        #alertEmail {
+            width: 50% !important;
+        }
+
+        #budgetPics img {
+            max-width: 700px;
+            max-height: 700px;
+        }
     }
-}
+
+    @media only screen and (max-width: 1500px) and (min-width:1200px) {
+        #tech-used {
+            -webkit-column-count: 3;
+            -moz-column-count: 3;
+            column-count: 3;
+            font-size: 20px;
+        }
+
+        #budgetPics img {
+            max-width: 900px;
+            max-height: 900px;
+        }
+    }
